Fix visibility issue of sparkline on darker schemes

--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -19,6 +19,18 @@
 	}
 }
 
+/* Because the sparkline is an image, there's an exception here
+ * where specific color schemes are targeted instead of using 
+ * CSS variables. This ensures that the sparkline can still be 
+ * seen (as white) on some of the darker color schemes.
+ */
+.is-classic-blue .sidebar__menu li.stats.selected .sidebar__sparkline, 
+.is-powder-snow .sidebar__menu li.stats.selected .sidebar__sparkline,
+.is-nightfall .sidebar__menu li.stats.selected .sidebar__sparkline {
+	filter: brightness( 100 );
+	-webkit-filter: brightness( 100 );
+}
+
 .sidebar__menu li.stats a::after,
 .notouch .sidebar__menu li.stats:hover:not( .selected ) a:first-child::after {
 	background: none;
@@ -42,4 +54,3 @@
 		fill: var( --color-primary );
 	}
 }
-
